# -*- coding: utf-8 -*-

2010-12-31  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb (Gem.activate): Do not add gem bindir to the
	  $LOAD_PATH. Bug #25208.
	* test/test_kernel.rb: ditto.
	* lib/rubygems/commands/environment_command.rb: Add support for 'platform'
	  suboption. Feature Request #28300
	* test/test_gem_commands_environment_command.rb: ditto.

2010-12-29  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/user_interaction.rb: Implemented SimpleDownloadReporter
	  and VerboseDownloadReporter to provide a progress indicator during
	  gem installation. Idea and patch by Ryan Melt (Pull #2)

2010-12-10  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/commands/server_command.rb: Added --launch option to
	  automatically launch a browser window. Pull Request #11 by Gordon
	  Thiesfeld.
	* lib/rubygems/server.rb: ditto.

2010-12-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/security.rb: Fixed indent, described how to manually
	  verify signed gems.

2010-07-10  Luis Lavena <luislavena@gmail.com>

	* lib/rubygems.rb: Expand Windows user home canditates for Ruby 1.8
	  Bug #28371

2010-05-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  1.3.7.

2010-04-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Use gem_dirs, not gem_dir.

2010-04-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  1.3.7.pre.1.
	* lib/rubygems/commands/contents_command.rb:  Make --prefix the
	  default as specified in --help.  Bug #27211 by Mamoru Tasaka.
	* lib/rubygems/commands/environment_command.rb:  Hide gemcutter_key to
	  for security.
	* lib/rubygems/commands/server_command.rb:  Allow specification of
	  multiple gem dirs.  Bug #27573 by Yuki Sonoda.
	* lib/rubygems.rb:  Require rubygems/custom_require if --disable-gem
	  was set.  Bug #27700 by Roger Pack.

2010-04-21  Evan Phoenix <evan@fallingsnow.net>

	* lib, test: Add ability to install and fetch to report that the