@@ -22,7 +22,9 @@ class Gem::Ext::Builder
 
     File.open('Makefile', 'wb') {|f| f.print mf}
 
-    make_program = ENV['make']
+    # try to find make program from Ruby configue arguments first
+    RbConfig::CONFIG['configure_args'] =~ /with-make-prog\=(\w+)/
+    make_program = $1 || ENV['make']
     unless make_program then
       make_program = (/mswin/ =~ RUBY_PLATFORM) ? 'nmake' : 'make'
     end
